# workshop-project

./: README.md
.cursor/rules/: nextjs-development.mdc  python-development.mdc  specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
baseball_backend/: .env.example  README.md  pyproject.toml
baseball_backend/src/baseball_backend/: __init__.py  main.py
baseball_backend/src/baseball_backend/agents/: baseball_agent.py
baseball_backend/src/baseball_backend/api/: __init__.py
baseball_backend/src/baseball_backend/api/endpoints/: query.py
baseball_backend/src/baseball_backend/models/: player_info.py
baseball_backend/src/baseball_backend/prompts/: system_prompt.txt  user_prompt.txt
baseball_backend/tests/integration/: __init__.py  test_query_endpoint.py
baseball_backend/tests/unit/: __init__.py  test_baseball_agent.py
baseball_frontend/: README.md  package-lock.json  package.json
baseball_frontend/src/app/: layout.tsx  page.tsx
baseball_frontend/src/components/: player-results.tsx  player-search.tsx
baseball_frontend/src/types/: player.ts
specs/001-the-backend-project/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-the-backend-project/contracts/: openapi.json
workshop/: README.md  prompts.md
workshop/rules/: python-development.mdc
