[project]
name = "baseball-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leonardo Piñeyro", email = "leopiney@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "loguru>=0.7.3",
    "openai-agents>=0.3.2",
    "pydantic>=2.11.9",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
]
